examples/errors/oop_non_class_instantiation.vut
let Student = 1
let s = Student()
